mise a jour.1 de projet

--- a/package.json
+++ b/package.json
@@ -9,16 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-<<<<<<< HEAD
-    "next": "^15.3.5",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
-=======
     "next": "15.3.5",
     "next-intl": "^4.3.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
->>>>>>> 0a7eb321b64a755a247a42216caaf9011885f46f
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -26,17 +21,9 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-<<<<<<< HEAD
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
     "tailwindcss": "^4",
-=======
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.5",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.11",
->>>>>>> 0a7eb321b64a755a247a42216caaf9011885f46f
     "typescript": "^5"
   }
 }
